contrast fix

--- a/WDD230/BountifulFoods/styles/small.css
+++ b/WDD230/BountifulFoods/styles/small.css
@@ -204,13 +204,14 @@ html {
   }
 /* Worknumbering (1/3 etc) */
 .MessageInfo {
-  color: #f2f2f3;
   font-size: 14px;
   padding: 10px 14px;
   position: absolute;
   top: 0;
   font-family: var(--font-2);
   font-weight: 500;
+  color: var(--font-color-1);
+  background-color: var(--accent5-color);
 }
 /* Faint animation */
 .fade {
@@ -396,6 +397,9 @@ html {
     font-family: var(--font-2);
     font-weight: bold;
     font-size: var(--font-size-parragraph);
+    list-style: none;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
 }
 .liparagraph{
     font-family: var(--font-2);
